# alpha_sdk

./: ALPHA.md  pyproject.toml  test_client.py
src/alpha_sdk/: __init__.py  client.py  compact_proxy.py  observability.py  proxy.py  weave.py
src/alpha_sdk/cli/: __init__.py  cortex.py
src/alpha_sdk/memories/: __init__.py  cortex.py  db.py  embeddings.py  recall.py  suggest.py
src/alpha_sdk/system_prompt/: __init__.py  assemble.py  calendar.py  capsules.py  context.py  here.py  soul.py  todos.py
src/alpha_sdk/tools/: __init__.py  cortex.py
tests/: test_token_count.py
