[project]
name = "alpha_sdk"
version = "0.1.0"
description = "Everything that turns Claude into Alpha"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.30.0",
    "httpx>=0.28.0",
    "logfire>=3.0.0",
    "pendulum>=3.0.0",
    "pgvector>=0.3.0",
    "redis>=5.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/alpha_sdk"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
